@@ -232,9 +232,10 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adjustment
-operator|->
-name|lower
+argument_list|)
 operator|<=
 literal|0.0
 condition|)
@@ -242,13 +243,15 @@ name|value
 operator|=
 name|log
 argument_list|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adjustment
-operator|->
-name|value
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adjustment
-operator|->
-name|lower
+argument_list|)
 operator|+
 literal|0.1
 argument_list|)
@@ -258,9 +261,10 @@ name|value
 operator|=
 name|log
 argument_list|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|adjustment
-operator|->
-name|value
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|gtk_adjustment_set_value
@@ -321,17 +325,19 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|other_adj
-operator|->
-name|lower
+argument_list|)
 operator|<=
 literal|0.0
 condition|)
 name|value
 operator|+=
+name|gtk_adjustment_get_lower
+argument_list|(
 name|other_adj
-operator|->
-name|lower
+argument_list|)
 operator|-
 literal|0.1
 expr_stmt|;
@@ -1224,21 +1230,6 @@ name|GtkAdjustment
 modifier|*
 name|scale_adj
 decl_stmt|;
-name|gdouble
-name|correction
-decl_stmt|;
-name|gdouble
-name|log_value
-decl_stmt|,
-name|log_lower
-decl_stmt|,
-name|log_upper
-decl_stmt|;
-name|gdouble
-name|log_step_increment
-decl_stmt|,
-name|log_page_increment
-decl_stmt|;
 name|g_return_if_fail
 argument_list|(
 name|GTK_IS_ADJUSTMENT
@@ -1264,21 +1255,40 @@ expr_stmt|;
 if|if
 condition|(
 name|logarithmic
-condition|)
-block|{
-if|if
-condition|(
+operator|==
 name|gimp_scale_entry_get_logarithmic
 argument_list|(
 name|adjustment
 argument_list|)
 condition|)
 return|return;
+if|if
+condition|(
+name|logarithmic
+condition|)
+block|{
+name|gdouble
+name|correction
+decl_stmt|;
+name|gdouble
+name|log_value
+decl_stmt|,
+name|log_lower
+decl_stmt|,
+name|log_upper
+decl_stmt|;
+name|gdouble
+name|log_step_increment
+decl_stmt|,
+name|log_page_increment
+decl_stmt|;
 name|correction
 operator|=
+operator|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|scale_adj
-operator|->
-name|lower
+argument_list|)
 operator|>
 literal|0
 condition|?
@@ -1287,17 +1297,20 @@ else|:
 literal|0.1
 operator|+
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|scale_adj
-operator|->
-name|lower
+argument_list|)
+operator|)
 expr_stmt|;
 name|log_value
 operator|=
 name|log
 argument_list|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|scale_adj
-operator|->
-name|value
+argument_list|)
 operator|+
 name|correction
 argument_list|)
@@ -1306,9 +1319,10 @@ name|log_lower
 operator|=
 name|log
 argument_list|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|scale_adj
-operator|->
-name|lower
+argument_list|)
 operator|+
 name|correction
 argument_list|)
@@ -1317,9 +1331,10 @@ name|log_upper
 operator|=
 name|log
 argument_list|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|scale_adj
-operator|->
-name|upper
+argument_list|)
 operator|+
 name|correction
 argument_list|)
@@ -1334,18 +1349,21 @@ operator|)
 operator|/
 operator|(
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|scale_adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|scale_adj
-operator|->
-name|lower
+argument_list|)
 operator|)
 operator|/
+name|gtk_adjustment_get_step_increment
+argument_list|(
 name|scale_adj
-operator|->
-name|step_increment
+argument_list|)
 operator|)
 expr_stmt|;
 name|log_page_increment
@@ -1358,18 +1376,21 @@ operator|)
 operator|/
 operator|(
 operator|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|scale_adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_lower
+argument_list|(
 name|scale_adj
-operator|->
-name|lower
+argument_list|)
 operator|)
 operator|/
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|scale_adj
-operator|->
-name|page_increment
+argument_list|)
 operator|)
 expr_stmt|;
 if|if
@@ -1383,47 +1404,34 @@ name|GtkObject
 modifier|*
 name|new_adj
 decl_stmt|;
-name|gdouble
-name|lower
-decl_stmt|;
-name|gdouble
-name|upper
-decl_stmt|;
-name|lower
-operator|=
-name|scale_adj
-operator|->
-name|lower
-expr_stmt|;
-name|upper
-operator|=
-name|scale_adj
-operator|->
-name|upper
-expr_stmt|;
 name|new_adj
 operator|=
 name|gtk_adjustment_new
 argument_list|(
+name|gtk_adjustment_get_value
+argument_list|(
 name|scale_adj
-operator|->
-name|value
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|scale_adj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|scale_adj
-operator|->
-name|upper
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_step_increment
+argument_list|(
 name|scale_adj
-operator|->
-name|step_increment
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|scale_adj
-operator|->
-name|page_increment
+argument_list|)
 argument_list|,
 literal|0.0
 argument_list|)
@@ -1459,10 +1467,7 @@ name|g_signal_handlers_disconnect_by_func
 argument_list|(
 name|adj
 argument_list|,
-name|G_CALLBACK
-argument_list|(
 name|gimp_scale_entry_unconstrained_adjustment_callback
-argument_list|)
 argument_list|,
 name|scale_adj
 argument_list|)
@@ -1471,44 +1476,28 @@ name|g_signal_handlers_disconnect_by_func
 argument_list|(
 name|scale_adj
 argument_list|,
-name|G_CALLBACK
-argument_list|(
 name|gimp_scale_entry_unconstrained_adjustment_callback
-argument_list|)
 argument_list|,
 name|adj
 argument_list|)
 expr_stmt|;
 block|}
+name|gtk_adjustment_configure
+argument_list|(
 name|scale_adj
-operator|->
-name|value
-operator|=
+argument_list|,
 name|log_value
-expr_stmt|;
-name|scale_adj
-operator|->
-name|lower
-operator|=
+argument_list|,
 name|log_lower
-expr_stmt|;
-name|scale_adj
-operator|->
-name|upper
-operator|=
+argument_list|,
 name|log_upper
-expr_stmt|;
-name|scale_adj
-operator|->
-name|step_increment
-operator|=
+argument_list|,
 name|log_step_increment
-expr_stmt|;
-name|scale_adj
-operator|->
-name|page_increment
-operator|=
+argument_list|,
 name|log_page_increment
+argument_list|,
+literal|0.0
+argument_list|)
 expr_stmt|;
 name|g_signal_connect
 argument_list|(
@@ -1561,23 +1550,11 @@ name|lower
 decl_stmt|,
 name|upper
 decl_stmt|;
-if|if
-condition|(
-operator|!
-name|gimp_scale_entry_get_logarithmic
-argument_list|(
-name|adjustment
-argument_list|)
-condition|)
-return|return;
 name|g_signal_handlers_disconnect_by_func
 argument_list|(
 name|adj
 argument_list|,
-name|G_CALLBACK
-argument_list|(
 name|gimp_scale_entry_log_adjustment_callback
-argument_list|)
 argument_list|,
 name|scale_adj
 argument_list|)
@@ -1586,10 +1563,7 @@ name|g_signal_handlers_disconnect_by_func
 argument_list|(
 name|scale_adj
 argument_list|,
-name|G_CALLBACK
-argument_list|(
 name|gimp_scale_entry_exp_adjustment_callback
-argument_list|)
 argument_list|,
 name|adj
 argument_list|)
@@ -1598,25 +1572,28 @@ name|lower
 operator|=
 name|exp
 argument_list|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|scale_adj
-operator|->
-name|lower
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|upper
 operator|=
 name|exp
 argument_list|(
+name|gtk_adjustment_get_upper
+argument_list|(
 name|scale_adj
-operator|->
-name|upper
+argument_list|)
 argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
 operator|<=
 literal|0.0
 condition|)
@@ -1626,55 +1603,47 @@ operator|+=
 operator|-
 literal|0.1
 operator|+
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
 expr_stmt|;
 name|upper
 operator|+=
 operator|-
 literal|0.1
 operator|+
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
 expr_stmt|;
 block|}
+name|gtk_adjustment_configure
+argument_list|(
 name|scale_adj
-operator|->
-name|value
-operator|=
+argument_list|,
+name|gtk_adjustment_get_value
+argument_list|(
 name|adj
-operator|->
-name|value
-expr_stmt|;
-name|scale_adj
-operator|->
+argument_list|)
+argument_list|,
 name|lower
-operator|=
-name|lower
-expr_stmt|;
-name|scale_adj
-operator|->
+argument_list|,
 name|upper
-operator|=
-name|upper
-expr_stmt|;
-name|scale_adj
-operator|->
-name|step_increment
-operator|=
+argument_list|,
+name|gtk_adjustment_get_step_increment
+argument_list|(
 name|adj
-operator|->
-name|step_increment
-expr_stmt|;
-name|scale_adj
-operator|->
-name|page_increment
-operator|=
+argument_list|)
+argument_list|,
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|adj
-operator|->
-name|page_increment
+argument_list|)
+argument_list|,
+literal|0.0
+argument_list|)
 expr_stmt|;
 name|g_signal_connect
 argument_list|(
